--- a/index.html
+++ b/index.html
@@ -6,32 +6,36 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="header">
-      <div class="header-left">
-        <p class="logo">Logo</p>
+    <div class="content">
+      <div class="header">
+        <div class="header-left">
+          <p class="logo">Logo Text More</p>
+        </div>
+        <div class="header-right">
+          <ul class="link-list">
+            <li><a href="#">Link One</a></li>
+            <li><a href="#">Link Two</a></li>
+            <li><a href="#">Link Three</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="header-right">
-        <ul class="link-list">
-          <li><a href="#">Link One</a></li>
-          <li><a href="#">Link Two</a></li>
-          <li><a href="#">Link Three</a></li>
-        </ul>
+    
+      <div class="area-one">
+        <p>Some Content</p>
       </div>
-    </div>
-    <div class="area-one">
-      <p>Some Content</p>
-    </div>
-    <div class="area-two">
-      <p>Some More Content</p>
-    </div>
-    <div class="area-three">
-      <p>And lastly more content</p>
-    </div>
-    <div class="area-four">
-      <p>Oops one more spot</p>
-    </div>
-    <div class="footer">
-      <p>Copyright © The Odin Project 2021</p>
+      <div class="area-two">
+        <p>Some More Content</p>
+      </div>
+      <div class="area-three">
+        <p>And lastly more content</p>
+      </div>
+      <div class="area-four">
+        <p>Oops one more spot</p>
+      </div>
+    
+      <div class="footer">
+        <p>Copyright © The Odin Project 2021</p>
+      </div>
     </div>
   </body>
 </html>
