Add styles to area-one

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
       </div>
     
       <div class="area-one">
-        <p>Some Content</p>
+        <div class="hero">
+          <h1>Hero Area Start</h1>
+          <p class="hero-text">Some cool information to be found here. Check it out it's so cool!</p>
+          <button class="hero-button">Sign Up</button>
+        </div>
+        <!--<div class="hero-image">-->
+          <img src="images/parrot.jpg" alt="Spot for a picture">
+        <!--</div>-->
       </div>
       <div class="area-two">
         <p>Some More Content</p>
