Add boxes to area-two

--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
         <!--</div>-->
       </div>
       <div class="area-two">
-        <p>Some More Content</p>
+        <h2>Pictures!</h2>
+        <div class="img-list">
+          <div class="img-content">
+            <p>some text goes here</p>
+          </div>
+          <div class="img-content">
+            <p>some text goes here</p>
+          </div>
+          <div class="img-content">
+            <p>some text goes here</p>
+          </div>
+          <div class="img-content">
+            <p>some text goes here</p>
+          </div>
+        </div>
       </div>
       <div class="area-three">
         <p>And lastly more content</p>
