Set up area three and four, add Roboto font

--- a/index.html
+++ b/index.html
@@ -48,10 +48,18 @@
         </div>
       </div>
       <div class="area-three">
-        <p>And lastly more content</p>
+        <p class="quote">Desire is the key to motitvation, but it's determination and commitment to an unrelenting pursuit
+          of your goal - a commitment to excellence - that will enable you to attain the success you seek.</p>
+        <p class="person"> - Mario Andretti</p>
       </div>
       <div class="area-four">
-        <p>Oops one more spot</p>
+        <div class="action-holder">
+          <div class="action-text">
+            <h2>Call to action! It's time!</h2>
+            <p>Sign up for our product by clicking that button over there!</p>
+          </div>
+          <button class="hero-button">Sign Up</button>
+        </div>
       </div>
     
       <div class="footer">
