Upload images, start space theme

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-18">
     <title>Landing Page</title>
+    <link rel="icon" href="images/icons8-galaxy-64.png">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="content">
       <div class="header">
         <div class="header-left">
-          <p class="logo">Logo Text More</p>
+          <p class="logo">It's All About Space!</p>
         </div>
         <div class="header-right">
           <ul class="link-list">
@@ -22,35 +23,38 @@
     
       <div class="area-one">
         <div class="hero">
-          <h1>Hero Area Start</h1>
+          <h1>Space is cool! Check it out!</h1>
           <p class="hero-text">Some cool information to be found here. Check it out it's so cool!</p>
           <button class="hero-button">Sign Up</button>
         </div>
         <!--<div class="hero-image">-->
-          <img src="images/parrot.jpg" alt="Spot for a picture">
+          <img class="hero-img" src="images/andromeda.jpg" alt="Spot for a picture">
         <!--</div>-->
       </div>
       <div class="area-two">
         <h2>Pictures!</h2>
         <div class="img-list">
-          <div class="img-content">
-            <p>some text goes here</p>
+          <div class="img-card">
+            <img src="images/cartwheel.jpg" alt="Cartwheel Galaxy">
+            <p>Some text goes in here describe the picures and what is going on and on and on.</p>
           </div>
-          <div class="img-content">
-            <p>some text goes here</p>
+          <div class="img-card">
+            <img src="images/jupiter.png" alt="Cartwheel Galaxy">
+            <p>Some text goes in here describe the picures and what is going on and on and on.</p>
           </div>
-          <div class="img-content">
-            <p>some text goes here</p>
+          <div class="img-card">
+            <img src="images/saturn.jpg" alt="Cartwheel Galaxy">
+            <p>Some text goes in here describe the picures and what is going on and on and on.</p>
           </div>
-          <div class="img-content">
-            <p>some text goes here</p>
+          <div class="img-card">
+            <img src="images/crab.jpg" alt="Cartwheel Galaxy">
+            <p>Some text goes in here describe the picures and what is going on and on and on.</p>
           </div>
         </div>
       </div>
       <div class="area-three">
-        <p class="quote">Desire is the key to motitvation, but it's determination and commitment to an unrelenting pursuit
-          of your goal - a commitment to excellence - that will enable you to attain the success you seek.</p>
-        <p class="person"> - Mario Andretti</p>
+        <p class="quote">For me, it is far better to grasp the Universe as it really is than to persist in delusion, however satisfying and reassuring.</p>
+        <p class="person"> - Carl Sagan</p>
       </div>
       <div class="area-four">
         <div class="action-holder">
@@ -64,6 +68,7 @@
     
       <div class="footer">
         <p>Copyright © The Odin Project 2021</p>
+        <a class="icons8" target="_blank" href="https://icons8.com/icon/67uMa3wT3fXu/galaxy">Galaxy</a> icon by <a class="icons8" target="_blank" href="https://icons8.com">Icons8</a>
       </div>
     </div>
   </body>
