Update colors and icons

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-18">
     <title>Landing Page</title>
-    <link rel="icon" href="images/icons8-galaxy-64.png">
+    <link rel="icon" href="images/icons8-satellite-64.png">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="content">
       <div class="header">
         <div class="header-left">
+          <img class="header-img" src="images/icons8-satellite-64.png" alt="logo image">
           <p class="logo">It's All About Space!</p>
         </div>
         <div class="header-right">
@@ -68,7 +69,7 @@
     
       <div class="footer">
         <p>Copyright © The Odin Project 2021</p>
-        <a class="icons8" target="_blank" href="https://icons8.com/icon/67uMa3wT3fXu/galaxy">Galaxy</a> icon by <a class="icons8" target="_blank" href="https://icons8.com">Icons8</a>
+        <a class="icons8" target="_blank" href="https://icons8.com/icon/qWuvG6hYx5WQ/satellite">Satellite</a> icon by <a class="icons8" target="_blank" href="https://icons8.com">Icons8</a>
       </div>
     </div>
   </body>
